--- a/conf-nginx/sites/git.conf
+++ b/conf-nginx/sites/git.conf
@@ -1,6 +1,22 @@
 server {
-        listen       443;
         listen       80;
+
+        server_name git.example.com; 
+
+	# for LFS upload
+        client_max_body_size 4g;
+
+        location / {
+            proxy_pass http://git;
+            proxy_set_header Host            $host;
+            proxy_set_header X-Forwarded-For $remote_addr;
+        }
+
+        include sites/letsencrypt.conf;
+ }
+
+server {
+        listen       443 ssl;
 
         server_name git.example.com; 
 
